--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,21 @@
 </head>
 
 <body>
+    <h1>Login</h1>
     <h1>Chat Messaging</h1>
+    <div>
+        <div>
+        <input type="text" id="emailInput" placeholder="Enter Your Email">
+        </div>
+        <div>
+        <input type="text" id="passwordInput" placeholder="Enter Your Password">
+        </div>
+        <div>
+        <button id="loginButton">Send</button>
+        </div>
+    </div>
+
+    
     <div>
         <input type="text" id="messageInput" placeholder="Enter Your Message">
         <button id="messageButton">Send</button>
