--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,8 @@
         <button id="messageButton">Send</button>
     </div>
     <div id="messages"></div>
-    <script src="src/main.js"></script>
+    <script type="module" src="src/main.ts"></script>
+    <!-- <script src="src/main.js"></script> -->
 </body>
 
 </html>
